<resources>
    <string name="app_name">digiM</string>
    <string name="no_account">New user? Sign Up</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string-array name="promotions_list">
        <item>Instagram</item>
        <item>Facebook</item>
        <item>Youtube</item>
        <item>TikTok</item>
        <item>Twitter</item>
    </string-array>

    <string name="aboutText">-- digiM is providing the digital web application platform for marketing as well as educational platform for the digital marketing strategy. Apart of these two features there are feature called "Ideas" in which user can share their ideas as a formate of text or images.\n
            \n-- EDUCATION feature is kind of Informative education part where all the digital marketing strategy and the factors are describe by the Admin.\n
        \n-- PROMOTE is feature where user can promote their social media profile as a personal profile or brand and maximize their reach towards the large digital world digiM is web portal so the technologies and programming languages will php, html, css, javascript, jquery and needed API so basically digiM is platform for marketing and promotions where user can learn digital marketing also.</string>

    <string name="working">
        Nowadays, so many people are facing some problems in the growth of business . So this is for the growth and development of the business by different categories . So this is the site for the promotion of the social medias like: Facebook,Instagam,Twitter,
TikTok etc. You can do the promotion or a kind of marketing with this site. And it also works like you can send a request and use our different services and can promote your social media accounts.
    </string>
    <string name="google_maps_key">AIzaSyBZhPOEdOpG8jZDDOZKORT7g-WI9EfLaPc</string>
    <string name="digiMHeader">digiM</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="logInName">Log in</string>
    <string name="forgotPasswordHint">Forgot Password?</string>
    <string name="firstNameHint">First name</string>
    <string name="landscapeFirstNameHint">Name</string>
    <string name="landscapeSurnameHint">Surname</string>
    <string name="signupBtn">Sign Up</string>
    <string name="alreadyAccountText">Existing User? Sign in</string>
    <string name="appTagLine">Your victory, our success&#8230;</string>
    <string name="shareIdeaLine">Share your creative ideas here</string>
    <string name="ratingTagLine">Promotion will take time to be done so be patient,we are finding best target market for you but if it also not done since long time tell us.</string>
    <string name="complainsHint">Write your complaints here&#8230;</string>
    <string name="thanksForVisitingText">Thanks for visiting</string>
    <string name="changeText">Change</string>
    <string name="communicationAddressText">Communication Address</string>
    <string name="addressText">Plot No. 1/B, \nSuyog Bunglow, \nPrahladnagar,Ahmedabad</string>
    <string name="emailText">socialmefgi@gmail.com</string>
    <string name="usernameText">username</string>
    <string name="developerTitle">Developer :</string>
    <string name="developerNameText">Jay Dholakiya</string>
    <string name="conceptTitle">Concept by :</string>
    <string name="conceptantName">Yash Vyas</string>
    <string name="lastNameHint">Last name</string>
    <string name="submitBtnText">Submit</string>
    <string name="surNameText">Sur name</string>
    <string name="uniqueideaText">uniqueIdea</string>
    <string name="sendernameText">- senderName</string>
    <string name="timestampText">timeStamp</string>
    <string name="no_more_ideas_text">No more ideas</string>
    <string name="no_orders_text">No orders</string>
    <string name="select_promotions_text">Select promotions :</string>
    <string name="instagramText">Instagram</string>
    <string name="youtubeText">Youtube</string>
    <string name="facebookText">Facebook</string>
    <string name="twitterText">Twitter</string>
    <string name="tiktokText">TikTok</string>
    <string name="no_promotion_selected_text">No promotion selected</string>
    <string name="paste_your_social_media_url_text">Paste your social media URL&#8230;</string>
    <string name="transaction_id_text">Transaction Id</string>
    <string name="mobile_no_text">Mobile No.</string>
    <string name="place_order_text">Place Order</string>
    <string name="no_more_feedbacks_text">No more feedbacks</string>
    <string name="complains_text">Complains</string>
    <string name="starrating_text">starRating</string>
    <string name="complain_time_text">Complain Time</string>
    <string name="view_pdf_text">View PDF</string>
    <string name="login_text">Login</string>
    <string name="removePicDiscription">removePic</string>
    <string name="profile_picture_discription">profilePictureDiscription</string>
    <string name="developer_content_discription">developerContentDiscription</string>
    <string name="concept_discription">conceptDiscription</string>
    <string name="facebook_icon">FacebookIcon</string>
    <string name="instagram_icon">InstagramIcon</string>
    <string name="twitter_icon">TwitterIcon</string>
    <string name="linkedin_icon">LinkedInIcon</string>
    <string name="rating_button">RatingButton</string>
    <string name="ideas_button">IdeasButton</string>
</resources>