<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:background="@color/whiteBackground">

    <TextView
        android:id="@+id/promotions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_promotions_text"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/socialRadio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/promotions">

        <RadioButton
            android:id="@+id/instagramRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instagramText"
            android:textColor="@color/textColor" />

        <RadioButton
            android:id="@+id/youtubeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:text="@string/youtubeText" />

        <RadioButton
            android:id="@+id/facebookRadio"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebookText" />

        <RadioButton
            android:id="@+id/twitterRadio"
            android:textColor="@color/textColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/twitterText" />

        <RadioButton
            android:id="@+id/tiktokRadio"
            android:layout_width="match_parent"
            android:textColor="@color/textColor"
            android:layout_height="wrap_content"
            android:text="@string/tiktokText" />
    </RadioGroup>

    <TextView
        android:id="@+id/promotionData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/no_promotion_selected_text"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/urlLink"
        app:layout_constraintEnd_toEndOf="@+id/promotions"
        app:layout_constraintStart_toStartOf="@+id/promotions" />

    <EditText
        android:id="@+id/urlLink"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/paste_your_social_media_url_text"
        android:inputType="text"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/transactionId"
        app:layout_constraintEnd_toEndOf="@+id/promotions"
        app:layout_constraintStart_toStartOf="@+id/promotions"
        android:autofillHints="" />

    <EditText
        android:id="@+id/transactionId"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/transaction_id_text"
        android:inputType="text"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/mobileNo"
        app:layout_constraintEnd_toEndOf="@+id/urlLink"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/urlLink"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/mobileNo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:hint="@string/mobile_no_text"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/placeOrder"
        app:layout_constraintEnd_toEndOf="@+id/transactionId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/transactionId"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/placeOrder"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button"
        android:text="@string/place_order_text"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/mobileNo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/mobileNo" />

</androidx.constraintlayout.widget.ConstraintLayout>