<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    android:background="@color/whiteBackground"
    android:padding="30dp"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".SigninActivity">

<!--Logohover : #af9999-->
    <TextView
        android:id="@+id/digimLogoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/digiMHeader"
        android:textColor="@color/textColor"
        android:textSize="55sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/emailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_email_black_24dp"
        android:hint="@string/emailHint"
        android:textColor="@color/textColor"
        android:layout_below="@id/digimLogoLogin"
        android:layout_marginTop="40dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/textColor"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLogin"
        android:layout_marginTop="20dp"
        android:textColor="@color/textColor"
        android:drawableEnd="@drawable/ic_vpn_key_black_24dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColorHint="@color/textColor"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logInName"
        android:textSize="18sp"
        android:textColor="@color/whiteBackground"
        android:onClick="signIn"
        android:background="@drawable/button"
        android:layout_below="@+id/passwordLogin"
        android:layout_marginTop="40dp"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:text="@string/forgotPasswordHint"
        android:onClick="forgotPassword"
        android:layout_below="@+id/loginBtn"
        android:paddingTop="40dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/noAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/forgotPass"
        android:paddingTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/no_account"
        android:textColor="@color/textColor"
        android:textSize="20sp" />
    <ProgressBar
        android:id="@+id/progressBarSignin"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>