<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    android:background="@color/whiteBackground"
    android:padding="30dp"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".SignupActivity">

    <!--Logohover : #af9999-->
    <TextView
        android:id="@+id/digimLogoSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/righteous"
        android:text="@string/digiMHeader"
        android:textColor="@color/textColor"
        android:textSize="55sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/digimLogoSignup"
        android:drawableEnd="@drawable/ic_verified_user_black_24dp"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:hint="@string/firstNameHint"
        android:layout_marginTop="40dp"
        android:textColor="@color/textColor"
        android:inputType="textFilter"
        android:textColorHint="@color/textColor"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_verified_user_black_24dp"
        android:hint="@string/lastNameHint"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/firstName"
        android:textColor="@color/textColor"
        android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz"
        android:inputType="textFilter"
        android:textColorHint="@color/textColor"
        android:textSize="20sp"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/emailSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_email_black_24dp"
        android:hint="@string/emailHint"
        android:textColor="@color/textColor"
        android:layout_below="@id/lastName"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/textColor"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/passwordSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailSignup"
        android:textColor="@color/textColor"
        android:layout_marginTop="20dp"
        android:drawableEnd="@drawable/ic_password"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:textColorHint="@color/textColor"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupBtn"
        android:textColor="@color/whiteBackground"
        android:layout_below="@+id/passwordSignup"
        android:layout_marginTop="40dp"
        android:onClick="signUp"
        android:background="@drawable/button"
        android:textAllCaps="false"/>

    <TextView
        android:id="@+id/alreadyAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signUpBtn"
        android:paddingTop="40dp"
        android:layout_centerHorizontal="true"
        android:text="@string/alreadyAccountText"
        android:textColor="@color/textColor"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBarSignUp"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>